# maclamp

./: .gitignore  README.md
src/: CMakeLists.txt  LampColor.pro  lamp.h  main.cpp
src/osx/: Info.plist
